--- a/app/views/refinery/admin/_head.html.erb
+++ b/app/views/refinery/admin/_head.html.erb
@@ -10,4 +10,8 @@
   <% end %>
   <%= yield :stylesheets %>
   <%= render 'refinery/admin/javascripts' %>
+
+<script type="text/javascript" src="//use.typekit.net/vle4bcj.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
 </head>
