--- a/app/assets/stylesheets/partials/_icons.scss
+++ b/app/assets/stylesheets/partials/_icons.scss
@@ -7,9 +7,6 @@
 .icon-add:before {
   content: "c";
 }
-.icon-plus:before {
-  content: "d";
-}
 .icon-search:before {
   content: "e";
 }
@@ -37,12 +34,54 @@
 .icon-film:before {
   content: "m";
 }
-.icon-video:before {
-  content: "n";
-}
 .icon-check:before {
   content: "o";
 }
 .icon-cancel:before {
   content: "p";
+}
+.icon-log-out:before {
+  content: "r";
+}
+.icon-plus:before {
+  content: "q";
+}
+.icon-play:before {
+  content: "s";
+}
+.icon-align-center:before {
+  content: "d";
+}
+.icon-align-left:before {
+  content: "n";
+}
+.icon-bold:before {
+  content: "t";
+}
+.icon-font:before {
+  content: "u";
+}
+.icon-italic:before {
+  content: "v";
+}
+.icon-list-bullet:before {
+  content: "w";
+}
+.icon-list-number:before {
+  content: "x";
+}
+.icon-quote:before {
+  content: "y";
+}
+.icon-heading:before {
+  content: "z";
+}
+.icon-paragraph:before {
+  content: "A";
+}
+.icon-link:before {
+  content: "B";
+}
+.icon-gear:before {
+  content: "C";
 }
