--- a/app/views/refinery/admin/_menu.html.erb
+++ b/app/views/refinery/admin/_menu.html.erb
@@ -1,4 +1,4 @@
-  <nav id="menu-tmp">
+  <nav id="menu-tmp" class="sidebar">
     <ul class="list-unstyled">
       <% ::Refinery::Plugins.active.in_menu.each do |plugin| -%>
         <li>
