--- a/app/views/refinery/admin/pages/_page.html.erb
+++ b/app/views/refinery/admin/pages/_page.html.erb
@@ -1,42 +1,32 @@
-<li class='clearfix record icons' id="<%= dom_id(page) -%>">
-  <div class='clearfix'>
-    <% if page.children.present? %>
-      <% if Refinery::Pages.auto_expand_admin_tree %> <i class="icon icon-folder-open"></i> <% else %> <i class="icon icon-folder"></i> <% end %> </span>
-    <% else %>
-      <i class="icon icon-file"></i>
-    <% end %>
+<li id="<%= dom_id(page) -%>" class="page-listing">
 
-    <span class='title <%= 'toggle' if page.children.present? %>'>
-      <%= page_title_with_translations page %>
-      <%= page_meta_information page %>
-    </span>
-    <% if Refinery::I18n.frontend_locales.many? %>
-      <span class='locales'>
-        <% page.translations.sort_by{|t| Refinery::I18n.frontend_locales.index(t.locale)}.each do |translation| %>
-          <%= link_to refinery_icon_tag("flags/#{translation.locale}.png", :size => '16x11'),
-                      refinery.edit_admin_page_path(page.nested_url, :switch_locale => translation.locale),
-                      :class => 'locale' if translation.title.present? %>
-        <% end %>
+    <span  class="page-title">
+      <% if page.children.present? %>
+        <% if Refinery::Pages.auto_expand_admin_tree %> <i class="icon icon-folder-open"></i> <% else %> <i class="icon icon-folder"></i> <% end %>
+      <% else %>
+        <i class="icon icon-file"></i>
+      <% end %>
+  
+      <span class='title <%= 'toggle' if page.children.present? %>'>
+        <%= page_title_with_translations page %>
+        <%= page_meta_information page %>
       </span>
-    <% end %>
-
+      <% if Refinery::I18n.frontend_locales.many? %>
+        <span class='locales'>
+          <% page.translations.sort_by{|t| Refinery::I18n.frontend_locales.index(t.locale)}.each do |translation| %>
+            <%= link_to refinery_icon_tag("flags/#{translation.locale}.png", :size => '16x11'),
+                        refinery.edit_admin_page_path(page.nested_url, :switch_locale => translation.locale),
+                        :class => 'locale' if translation.title.present? %>
+          <% end %>
+        </span>
+      <% end %>
+    </span>
+    
     <span class='actions'>
-      <%= link_to '<i class="icon icon-screen"></i>'.html_safe,
-                  page.url,
-                  :target => "_blank",
-                  :title => t('.view_live_html') %>
-                  
-      <%= link_to '<i class="icon icon-add"></i>'.html_safe,
-                  refinery.new_admin_page_path(:parent_id => page.id),
-                  :title => t('new', :scope => 'refinery.admin.pages') %>
-
-      <%= link_to '<i class="icon icon-edit"></i>'.html_safe,
-                  refinery.edit_admin_page_path(page.nested_url, :switch_locale => (page.translations.first.locale unless page.translated_to_default_locale?)),
-                  :title => t('edit', :scope => 'refinery.admin.pages') %>
-
-      <%= link_to '<i class="icon icon-trash"></i>'.html_safe,
+      <span class="delete">
+        <%= link_to '<i class="icon icon-trash"></i>'.html_safe,
                   refinery.admin_page_path(page.nested_url),
-                  :class => "cancel confirm-delete",
+                  :class => "cancel confirm-delete circle",
                   :title => t('delete', :scope => 'refinery.admin.pages'),
                   :data => {
                     :confirm => t('message',
@@ -45,9 +35,36 @@
                     )
                   },
                   :method => :delete if page.deletable? %>
+      </span>
+    
+      <span class="preview">
+        <%= link_to '<i class="icon icon-screen"></i>'.html_safe,
+                  page.url,
+                  :target => "_blank",
+                  :class => "circle",
+                  :title => t('.view_live_html') %>
+      </span>
+      
+      <span class="edit">
+        <%= link_to '<i class="icon icon-edit"></i>'.html_safe,
+                  refinery.edit_admin_page_path(page.nested_url, :switch_locale => (page.translations.first.locale unless page.translated_to_default_locale?)),
+                  :class => "circle",
+                  :title => t('edit', :scope => 'refinery.admin.pages') %>
+      </span>
+      
+      <span class="add-child">           
+        <%= link_to '<i class="icon icon-add"></i>'.html_safe,
+                  refinery.new_admin_page_path(:parent_id => page.id),
+                  :class => "circle",
+                  :title => t('new', :scope => 'refinery.admin.pages') %>
+      </span>
     </span>
-  </div>
-  <ul class='nested' data-ajax-content="<%= refinery.admin_children_pages_path(page.nested_url) %>">
-    <%= render(:partial => 'page', :collection => page.children) if Refinery::Pages.auto_expand_admin_tree %>
-  </ul>
+    
+
+  
+  <!-- This needs to be one line of code as the css looks for the empty state. -->
+
+  <ul class='nested list-unstyled' data-ajax-content="<%= refinery.admin_children_pages_path(page.nested_url) %>"><%= render(:partial => 'page', :collection => page.children) if Refinery::Pages.auto_expand_admin_tree %></ul>
+
+
 </li>
