--- a/app/views/refinery/admin/pages/_sortable_list.html.erb
+++ b/app/views/refinery/admin/pages/_sortable_list.html.erb
@@ -1,4 +1,4 @@
-<ul id='sortable_list'>
+<ul id='sortable_list' class="list-unstyled">
   <%= render :partial => 'page', :collection => @pages.roots  %>
 </ul>
 <%= render '/refinery/admin/sortable_list', :continue_reordering => !!local_assigns[:continue_reordering] %>
