--- a/app/views/refinery/admin/pages/_form.html.erb
+++ b/app/views/refinery/admin/pages/_form.html.erb
@@ -10,8 +10,8 @@
   
 <section id="page-form" class="col-sm-8 col-sm-offset-2">
   <div class="page-preview">
-    <h1>Title</h1>
-    <p>Est Banksy nihil gastropub eu, <strong>consequat vero semiotics.</strong> Keytar trust fund bitters flexitarian. <em>Direct trade pickled Etsy Odd</em> Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.</p>
+    <h1 contenteditable="true">Title</h1>
+    <p contenteditable="true">Est Banksy nihil gastropub eu, <strong>consequat vero semiotics.</strong> Keytar trust fund bitters flexitarian. <em>Direct trade pickled Etsy Odd</em> Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.</p>
     <blockquote>
       <p>
         Est Banksy nihil gastropub eu, consequat vero semiotics. Keytar trust fund bitters flexitarian. Direct trade pickled Etsy Odd Future, fingerstache veniam YOLO Shoreditch dolor aute Pinterest kogi letterpress. Meggings aesthetic deserunt semiotics, lomo chillwave occaecat flexitarian drinking vinegar. Excepteur scenester Godard drinking vinegar banh mi. Bicycle rights incididunt tousled, culpa Neutra cupidatat Schlitz mollit disrupt. Lomo non polaroid, twee iPhone DIY biodiesel nulla.
