--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -31,7 +31,11 @@
         </div>
       </section>
       <section id="sidebar-right">
-        hello
+        <nav id="sidebar-right-nav">
+          <ul class="list-unstyled">
+            <li><a href="">hello there</a></li>
+          </ul>
+        </nav>
       </section>
     </section>
     
