--- a/app/assets/stylesheets/refinery-backend.scss
+++ b/app/assets/stylesheets/refinery-backend.scss
@@ -138,6 +138,23 @@ body{
         }
       }
     }
+    #sidebar-right{
+      height: 100%;
+      width: 230px;
+      float: right;
+      padding: 0 15px;
+      #sidebar-right-nav{
+        background: $off-white;
+        width: 230px;
+        height: 100%;
+        margin-left: -15px;
+        padding: 15px 0 60px;
+        border-right: 1px solid $grey-2;
+        position: fixed;
+        overflow-y: scroll;
+        overflow-x: hidden;
+      }
+    }
   }
   .container-fluid{
     width: calc(100% - 550px);
