--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -21,7 +21,7 @@
           <%= render '/refinery/no_script' %>
           <%= render '/refinery/message' %>
         </div>
-        <section id="page">
+        <section id="page-preview">
           <%= yield %>
         </section>
       </section>
@@ -29,6 +29,9 @@
       <section id="sidebar-right">
         <nav id="sidebar-right-nav">
           <ul class="list-unstyled">
+            <li><a href="">hello there</a></li>
+            <li><a href="">hello there</a></li>
+            <li><a href="">hello there</a></li>
             <li><a href="">hello there</a></li>
           </ul>
         </nav>
