--- a/app/views/refinery/admin/pages/_form.html.erb
+++ b/app/views/refinery/admin/pages/_form.html.erb
@@ -8,7 +8,7 @@
 	</div>
 </section>
   
-<section id="page-form" class="col-sm-8 col-sm-offset-2">
+<section id="page-form">
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
@@ -25,7 +25,6 @@
             <a href=""><i class="icon icon-bold"></i></a>
             <a href=""><i class="icon icon-italic"></i></a>
             <a href=""><i class="icon icon-heading"></i></a>
-            <a href=""><i class="icon icon-align-center"></i></a>
             <a href=""><i class="icon icon-list-bullet"></i></a>
             <a href=""><i class="icon icon-list-number"></i></a>
             <a href=""><i class="icon icon-quote"></i></a>
