--- a/app/assets/stylesheets/refinery-backend.scss
+++ b/app/assets/stylesheets/refinery-backend.scss
@@ -37,9 +37,7 @@ body p{
   background: url("/assets/home-cover.jpg") center center / cover no-repeat;
 	height: 500px;
 	padding-top: 120px;
-	width: calc(100% + 90px);
-	margin-left: -45px;
-	margin-top: -45px;
+	width: 100%;
 	margin-bottom: 30px;
 }
 
@@ -141,34 +139,27 @@ body{
   }
   .inner-wrapper{
     width: calc(100% - 460px);
-    margin-top: 15px;
     float: left;
-    padding: 0 60px;
-    #page{
-      margin-top: 30px;
+  }
+  #sidebar-right{
+    height: 100%;
+    width: 230px;
+    padding: 0 15px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    #sidebar-right-nav{
+      background: $off-white;
+      width: 230px;
+      height: 100%;
+      margin-left: -15px;
+      padding: 15px 0 60px;
+      border-left: 1px solid $grey-2;
+      overflow-y: scroll;
+      overflow-x: hidden;
     }
   }
 }
-
-#sidebar-right{
-  height: 100%;
-  width: 230px;
-  padding: 0 15px;
-  position: fixed;
-  top: 0;
-  right: 0;
-  #sidebar-right-nav{
-    background: $off-white;
-    width: 230px;
-    height: 100%;
-    margin-left: -15px;
-    padding: 15px 0 60px;
-    border-left: 1px solid $grey-2;
-    overflow-y: scroll;
-    overflow-x: hidden;
-  }
-}
-
 
 #page-index{
   ul{
@@ -235,11 +226,18 @@ body{
   }
 }
 
+  #page-preview{
+    *[contenteditable=true]:focus{
+      outline: none;
+      position: relative;
+      border-left: 2px solid $grey-3;
+      padding-left: 15px;
+      margin-left: -17px;
+    }
+  }
+
 #page-form{
   margin-bottom: 90px;
-  .page-preview{
-    display: block;
-  }
   .new-module{
     display: block;
     clear: both;
