--- a/app/assets/stylesheets/refinery-backend.scss
+++ b/app/assets/stylesheets/refinery-backend.scss
@@ -3,8 +3,8 @@
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
 @import "partials/main";
-@import "partials/icons";
-@import "partials/icon-styles";
+@import "partials/icons-glass";
+@import "partials/icon-styles-glass";
 
 
 
