--- a/app/views/refinery/admin/pages/_form.html.erb
+++ b/app/views/refinery/admin/pages/_form.html.erb
@@ -38,20 +38,20 @@
         </div>
         
         <div class="new-module">
-          <a href="" class="circle add-module"><i class="icon icon-plus"></i></a>
+          <a href="" class="circle-icon add-module"><i class="icon icon-plus"></i></a>
           <div class="clearfix"></div>
         </div>
         
         <div class="new-module media-chooser">
-          <a href="" class="circle add-module"><i class="icon icon-plus"></i></a>
-          <a href="" class="circle media-type"><i class="icon icon-paragraph"></i></a>
-          <a href="" class="circle media-type"><i class="icon icon-photo"></i></a>
-          <a href="" class="circle media-type"><i class="icon icon-film"></i></a>
+          <a href="" class="circle-icon add-module"><i class="icon icon-plus"></i></a>
+          <a href="" class="circle-icon media-type"><i class="icon icon-paragraph"></i></a>
+          <a href="" class="circle-icon media-type"><i class="icon icon-photo"></i></a>
+          <a href="" class="circle-icon media-type"><i class="icon icon-film"></i></a>
           <div class="clearfix"></div>
         </div>
         
         <div class="new-module media-chooser">
-          <a href="" class="circle add-module"><i class="icon icon-plus"></i></a>
+          <a href="" class="circle-icon add-module"><i class="icon icon-plus"></i></a>
           <form class="form-inline" role="form">
             <div class="form-group">
               <div class="input-group">
