--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -27,7 +27,7 @@
       </section>
       
       <section id="sidebar-right">
-        <nav id="sidebar-right-nav">
+        <nav id="sidebar-right-nav" class="sidebar-nav">
           <ul class="list-unstyled">
             <li><a href="">hello there</a></li>
             <li><a href="">hello there</a></li>
