--- a/app/views/refinery/admin/_menu.html.erb
+++ b/app/views/refinery/admin/_menu.html.erb
@@ -1,4 +1,4 @@
-  <nav id="sidebar-left-nav">
+  <nav id="sidebar-left-nav" class="sidebar-nav">
     <ul class="list-unstyled">
       <% ::Refinery::Plugins.active.in_menu.each do |plugin| -%>
         <li>
